# AMPL_cmake

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cpp
support/: FindAMPL.cmake
